# speech-to-spell

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  config.toml  docker-compose.local-models.yml  docker-compose.yml  plan.md  progress.md  pyproject.toml
.cursor/rules/: project-rules.mdc
backend/: pyproject.toml  requirements.txt
backend/app/: game.py  main.py
deploy/: Dockerfile.voxtral  LOCAL_MODELS.md  nginx.conf  setup.sh
docs/: DEPLOY_GAMETILENET.md  STICKERS_DATASET.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx  GameRouter.tsx  config.ts  i18n.ts  index.css  main.tsx  types.ts
frontend/src/components/: AmbientSparkles.tsx  ArchitecturePage.tsx  Arena.tsx  CommentatorPanel.tsx  EmojiHand.tsx  EmojiParticles.tsx  JudgePanel.tsx  LanguageToggle.tsx  Lobby.tsx  MicSelector.tsx  PlayerControls.tsx  PlayerPanel.tsx  RemoteGameView.tsx  RulesPanel.tsx  SpellEffect.tsx  SpellHistory.tsx  SpellLog.tsx  TargetSelector.tsx  TextSpellInput.tsx  VoiceCapture.tsx  WaitingRoom.tsx  WizardPanel.tsx
frontend/src/effects/: SpellEffects.tsx
frontend/src/hooks/: useAudioDevices.ts  useGame.ts  useGameState.ts  useLanguage.ts  useMicrophone.ts  useWebSocket.ts
frontend/src/screens/: GameScreen.tsx  LobbyScreen.tsx
graphics_factory/: __init__.py  spell_bib.md  sticker_gametilenet.py
graphics_factory/css_generation/: __init__.py  display.py  generate.py  preview.html
graphics_factory/emoji_effects/: __init__.py  display.py  effects_bib.md  preview.html  tool.py
graphics_factory/gif_fetch/: __init__.py  tool.py
prompt/: project_rules.md
scripts/: generate_sounds.py  get_nearest_tile.py  get_sticker.py  pull_stickers_dataset.py
sounds_cache/: 03e38af3017f0b30.json  19d8b0ee4d5b740a.json  animal_roar.json  arcane.json  b785a40ef0f92a31.json  blood.json  choir.json  cosmic.json  dark.json  earthquake.json  explosion_big.json  fire_crackle.json  fireball.json  freeze.json  ghost.json  healing.json  ice.json  laughter.json  metal_clash.json  nature.json  poison.json  shield.json  swarm.json  teleport.json  thunder.json  time.json  water_splash.json  wind_howl.json
src/speech_to_spell/: commentator.py  game.py  main.py  room.py  sound.py  spell.py  tts.py  voice.py
tests/: test_css_generation.py  test_emoji_effects.py  test_ministral_inference.py  test_sticker_fetch.py  test_sticker_gametilenet.py
(+2 files in other folders)
