[project]
name = "speech-to-spell"
version = "0.1.0"
description = "Multiplayer wizard duel game powered by voice and Mistral AI"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "mistralai>=1.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
