[project]
name = "speech-to-spell"
version = "0.1.0"
description = "Multiplayer wizard duel game powered by voice and Mistral AI"
readme = "README.md"
authors = [
    { name = "Charles Azam", email = "azamcharles0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.37.0",
    "huggingface-hub>=0.28.0",
    "fastapi>=0.134.0",
    "mistralai>=1.12.4",
    "python-dotenv>=1.2.1",
    "pytest>=8.0.0",
    "requests>=2.32.0",
    "scipy>=1.14.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]

# GameTileNet sticker fallback. Not installable on macOS Intel (x86_64) + Python 3.13: PyTorch has no wheels for that combo; use ARM Mac, Linux, or Python 3.11.
[project.optional-dependencies]
gametilenet = ["sentence-transformers>=3.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
