[project]
name = "backend"
version = "0.1.0"
description = "Speech to Spell backend — FastAPI + WebSockets"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "mistralai>=1.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]
